objects/Account_Plan_Tasks__c/Account_Plan_Tasks__c.object-meta.xml
<CustomObject>
    <description>Account Plan process that will allow us to standardize and improve how we do Account Planning for FY[https://tanium.atlassian.net/browse/SS-6846]</description>
    <label>Account Plan Tasks</label>
    <nameField>
        <displayFormat>APT-{000000}</displayFormat>
        <label>Account Plan Tasks Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Plan Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>