objects/Account_Plan_Tasks__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select the user to be assigned to this task</inlineHelpText>
    <label>Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Account_Plan_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>