objects/Account_Plan_Tasks__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <inlineHelpText>What is the due date for this task?</inlineHelpText>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>