objects/Account_Plan_Tasks__c/fields/Task_Type__c.field-meta.xml
<CustomField>
    <fullName>Task_Type__c</fullName>
    <label>Task Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Engagement Strategy</fullName>
            </value>
            <value>
                <fullName>Growth Strategy</fullName>
            </value>
            <value>
                <fullName>Marketing &amp; Events</fullName>
            </value>
            <value>
                <fullName>Partner Strategy</fullName>
            </value>
            <value>
                <fullName>Retention Strategy</fullName>
            </value>
            <value>
                <fullName>Strategy</fullName>
            </value>
            <value>
                <fullName>TAM Task</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>